# vector-db-api

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: dependencies.py  main.py
app/common/: embeddings.py  exceptions.py  misc.py
app/database/: __init__.py  memory_store.py  models.py
app/indexing/: __init__.py  _base.py  base.py  bruter_force.py  lsh_index.py  simple_index.py
app/routers/: chunks.py  documents.py  libraries.py  search.py
app/schemas/: chunk.py  document.py  library.py  search.py
app/services/: __init__.py  chunk_service.py  document_service.py  library_service.py  search_service.py
tests/_utils/: testcase.py
tests/api/: test_chunks.py  test_documents.py  test_libraries.py  test_search.py
tests/indexing/: test_lsh_index.py
