[project]
name = "vector-db-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=5.15.0",
    "faker>=37.3.0",
    "fastapi[standard]>=0.115.12",
    "numpy>=2.2.6",
    "pytest>=8.3.5",
    "scikit-learn>=1.6.1",
]
